Fix: blog bg overlapping text on mobile

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -26,8 +26,8 @@ $default-font-size: 1.6rem;
 $tm-border-radius: 3.2rem 0;
 
 // PATHS
-$theme-path: '/wp-content/themes/tourismemaskinonge';
-// $theme-path: '/tourismemaskinonge/wp-content/themes/tourismemaskinonge';
+// $theme-path: '/wp-content/themes/tourismemaskinonge';
+$theme-path: '/tourismemaskinonge/wp-content/themes/tourismemaskinonge';
 $placeholder-path: '#{$theme-path}/img/placeholders';
 
 $svg-start: 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"';
